# ctxpack

./: .gitignore  ARCHI.md  CLAUDE.md  PLAN.md  README.md  claude-code-prompt-ranking-fix.md
extension/: README.md  content_spike.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  tsconfig.json  vite.config.ts  vite.content.config.ts
extension/public/: manifest.json
extension/src/: index.css  types.ts
extension/src/content/: content.ts
extension/src/lib/: api.ts  bundle.ts  inject.ts  messages.ts
extension/src/popup/: App.tsx
extension/src/popup/components/: BundlePreview.tsx  Onboarding.tsx  RepoPicker.tsx  TokenBudgetPicker.tsx
server/: README.md  pyproject.toml
server/app/: main.py
server/app/api/: routes.py  schemas.py
server/app/core/: config.py
server/app/services/: chunker.py  embeddings.py  indexer.py  packer.py  retriever.py  scanner.py
server/scripts/: spike_embeddings.py
server/tests/: test_retriever_ranking.py  test_scanner.py
