[project]
name = "context-packer-server"
version = "0.1.0"
description = "Context Packer local companion server (FastAPI)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "sentence-transformers>=5.6.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "psutil>=7.2.2",
]
