[project]
name = "context-packer-server"
version = "0.1.0"
description = "Context Packer local companion server (FastAPI)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.115.0",
    "pathspec>=1.1.1",
    "pydantic>=2.9.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "psutil>=7.2.2",
    "pytest>=9.1.1",
]
